--- a/new-docs/src/content/docs/index.mdx
+++ b/new-docs/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/samoyed-mascot-moved.png
   actions:
     - text: Example Guide
-      link: /introduction
+      link: ./introduction
       icon: right-arrow
     - text: View on GitHub
       icon: external
